--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Fausto Fang</title>
   </head>
+  <style>
+    body {
+      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+        "Lucida Sans", Arial, sans-serif;
+    }
+    li {
+      margin: 20px;
+    }
+    .title {
+      font-style: italic;
+      margin: 20px;
+    }
+  </style>
   <body>
-    <h1>Introduction to Web Design</h1>
-    <p>Hello! I am Fausto, a Junior majoring in Computer Science and Interactive Media.</p>
-    <ul>
+    <h1 class="title">Introduction to Web Design</h1>
+    <p style="margin: 20px 10px">
+      Hello! I am Fausto, a Junior majoring in Computer Science and Interactive
+      Media.
+    </p>
+    <ul style="border: 5px solid black">
       <li><a href="./me/index.html">HTML</a></li>
       <li>CSS</li>
       <li>Raster Graphics</li>
