--- a/me/fun-facts.html
+++ b/me/fun-facts.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>Fun Facts - Fausto Fang</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
-      <a href="./index.html">Go back</a>
-      <h1>Fun facts about me!</h1>
+      <a class="backBtn" href="./index.html">Go back</a>
+      <h1 class="title">Fun facts about me!</h1>
     </header>
     <main>
       <p>Here are 3 fun facts about my life:</p>
@@ -17,7 +18,7 @@
         height="200"
         alt="A portrait picture of me."
       />
-      <ol>
+      <ol id="listFacts">
         <li>
           <h2>
             I have lived my whole life in Argentina, but my parents are Taiwanese inmigrants.
