--- a/me/index.html
+++ b/me/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>Fausto Fang</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
       <a href="../index.html">Go back</a>
-      <h1>Everything about me</h1>
+      <h1 class="title">Everything about me</h1>
     </header>
     <main>
       <p>
@@ -20,6 +21,7 @@
         width="300"
         height="200"
         alt="A cat on a couch."
+        id="mainPic"
       />
       <p>Click below to learn more about me:</p>
       <ul>
