--- a/me/projects.html
+++ b/me/projects.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>Projects - Fausto Fang</title>
+    <link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
     <header>
-      <a href="./index.html">Go Back</a>
-      <h1>My personal projects</h1>
+      <a class="backBtn" href="./index.html">Go Back</a>
+      <h1 class="title">My personal projects</h1>
     </header>
     <main>
       <p>
