--- a/me/index.html
+++ b/me/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a href="../index.html">Go back</a>
+      <a class="backBtn" href="../index.html">Go back</a>
       <h1 class="title">Everything about me</h1>
     </header>
     <main>
@@ -24,7 +24,7 @@
         id="mainPic"
       />
       <p>Click below to learn more about me:</p>
-      <ul>
+      <ul id="mainPageIndex">
         <li><a href="./fun-facts.html">Fun Facts!</a></li>
         <li><a href="./projects.html">Projects</a></li>
       </ul>
