--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <ul style="border: 5px solid black">
       <li><a href="./me/index.html">HTML</a></li>
       <li>CSS</li>
-      <li>Raster Graphics</li>
+      <li><a href="./images/index.html">Raster Graphics</a></li>
       <li>Vector Graphics</li>
       <li>Page Layout</li>
       <li>Responsive Design</li>
