--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
     </svg>
     <ul style="border: 5px solid black">
       <li><a href="./me/index.html">HTML</a></li>
-      <li>CSS</li>
+      <li><a href="/me/index.html"></a>CSS</li>
       <li><a href="./images/index.html">Raster Graphics</a></li>
-      <li>Vector Graphics</li>
-      <li>Page Layout</li>
+      <li><a href="#"></a>Vector Graphics</li>
+      <li><a href="./napoleon/index.html"></a>Page Layout</li>
       <li>Responsive Design</li>
       <li>JavaScript</li>
       <li>Final Project</li>
