--- a/images/index.html
+++ b/images/index.html
@@ -13,10 +13,15 @@
       <div id="title">
         <h1>Trip to Antarctica</h1>
       </div>
-      <img alt="Fausto sitting" sizes="(max-width: 480px) 33vw, (max-width: 960px) 50vw, 100vw" src="1440.png" srcset="960.png 960w, 480.png 480w"/>
+      <img
+        alt="Fausto sitting"
+        sizes="(min-width: 960px) 100vw,
+            (min-width: 480px) 50vw,
+            33vw"
+        src="1440.png"
+        srcset="480.png 480w, 960.png 960w, 1440.png 1440w"
+      />
     </main>
-    <footer>
-      
-    </footer>
+    <footer></footer>
   </body>
 </html>
