--- a/napoleon/index.html
+++ b/napoleon/index.html
@@ -20,7 +20,7 @@
       <h1>Napoleon Bonaparte</h1>
       <div class="photo">
         <img
-          src="napoleon-portrait.png"
+          src="napoleon-portrait-600w.png"
           srcset="
             napoleon-portrait-300w.png 300w,
             napoleon-portrait-600w.png 600w,
