--- a/napoleon/campaign.html
+++ b/napoleon/campaign.html
@@ -5,6 +5,7 @@
     <title>Napoleon's Military Campaigns</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<script src="script.js" defer></script>
 <body>
     <header>
         <nav>
