--- a/napoleon/index.html
+++ b/napoleon/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8" />
     <title>Napoleon Bonaparte - Military Genius and Emperor</title>
     <link rel="stylesheet" href="styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
+    <script src="script.js" defer></script>
+    <!-- load at the end with defer-->
     <header>
       <nav>
+        <button class="nav-toggle" aria-label="Toggle navigation menu">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <g stroke="currentColor" stroke-width="2" stroke-linecap="round">
+              <line x1="3" y1="6" x2="21" y2="6" />
+              <line x1="3" y1="12" x2="21" y2="12" />
+              <line x1="3" y1="18" x2="21" y2="18" />
+            </g>
+          </svg>
+        </button>
+
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="campaign.html">Military Campaigns</a></li>
@@ -16,9 +28,9 @@
         </ul>
       </nav>
     </header>
-
     <main>
       <h1>Napoleon Bonaparte</h1>
+      <h3>Click on the photo!</h3>
       <div class="photo">
         <img
           src="napoleon-portrait-600w.png"
