--- a/napoleon/campaign.html
+++ b/napoleon/campaign.html
@@ -9,6 +9,15 @@
 <body>
     <header>
         <nav>
+            <button class="nav-toggle" aria-label="Toggle navigation menu">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <g stroke="currentColor" stroke-width="2" stroke-linecap="round">
+              <line x1="3" y1="6" x2="21" y2="6" />
+              <line x1="3" y1="12" x2="21" y2="12" />
+              <line x1="3" y1="18" x2="21" y2="18" />
+            </g>
+          </svg>
+        </button>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="campaign.html" class="active">Military Campaigns</a></li>
