--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
       <li><a href="./images/index.html">Raster Graphics</a></li>
       <li><a href="#">Vector Graphics</a></li>
       <li><a href="./napoleon/index.html">Page Layout</a></li>
-      <li>Responsive Design</li>
-      <li>JavaScript</li>
+      <li><a href="./napoleon/index.html">Responsive Design</a></li>
+      <li><a href="./napoleon/index.html">JavaScript</a></li>
       <li>Final Project</li>
     </ul>
   </body>
